// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:Link:Placeholder matches the snapshot when format is desktopFooter 1`] = `
.c0 {
  color: #ffffff;
  font-family: Avenir,sans-serif;
  font-weight: 500;
  opacity: 0.53;
  font-size: 18px;
  height: 25px;
  margin-left: 140px;
  text-align: center;
  vertical-align: center;
}

<span
  className="c0"
  format="desktopFooter"
/>
`;

exports[`components:Link:Placeholder matches the snapshot when format is mobileFooter 1`] = `
.c0 {
  color: #ffffff;
  font-family: Avenir,sans-serif;
  font-weight: 500;
  opacity: 0.53;
  font-size: 15px;
  padding-top: 5px;
}

<span
  className="c0"
  format="mobileFooter"
/>
`;

exports[`components:Link:Placeholder matches the snapshot when format is mobileHeader 1`] = `
.c0 {
  color: #ffffff;
  font-family: Avenir,sans-serif;
  font-weight: 500;
  opacity: 0.53;
  color: #b62645;
  background-color: #eeedea;
  width: 100px;
  padding: 8px 8px 15px;
  border-radius: 4px;
}

<span
  className="c0"
  format="mobileHeader"
/>
`;

exports[`components:Link:Placeholder matches the snapshot when format is tabletFooter 1`] = `
.c0 {
  color: #ffffff;
  font-family: Avenir,sans-serif;
  font-weight: 500;
  opacity: 0.53;
  font-size: 15px;
  padding-top: 5px;
}

<span
  className="c0"
  format="tabletFooter"
/>
`;
